# ps2-software

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
ps2-basic/: CMakeLists.txt
ps2-basic/src/: main.c
ps2-cube/: CMakeLists.txt
ps2-cube/src/: main.c  mesh_data.c
ps2-flightcomputer/: CMakeLists.txt  build-release.sh
ps2-flightcomputer/include/: graphics.h  input.h  physics.h
ps2-flightcomputer/src/: CMakeLists.txt  graphics.c  main.c  physics.c
ps2-flightcomputer/src/assets/: arrow.c
ps2-hello-world/: CMakeLists.txt  Makefile.old
ps2-hello-world/src/: hello.c
ps2-rotating-triangle/: CMakeLists.txt  build-release.sh
ps2-rotating-triangle/src/: main.c
transfers/: PS2LINK.ELF
